# bbdb

./: .gitignore  Makefile.am  README  TODO  aclocal.m4  autogen.sh  configure.ac
debian/: .gitignore  NOTES  NOTES.org  changelog  control  copyright  docs  emacsen-install  emacsen-startup  gbp.conf  rules  watch
debian/source/: lintian-overrides
debian/upstream/: metadata  signing-key.asc
doc/: Makefile.am
lisp/: Makefile.am  bbdb-migrate.el  bbdb-site.el.in  bbdb.el
m4/: bbdb_with_vm.m4
